# etude

./: .pre-commit-config.yaml  pylintrc  pyproject.toml
attentions/: entity.py  enum.py  models.py
etude_moe/: cli.py  data_generation.py  models.py
lora/: models.py
moe/: attention.py  cli.py  models.py
positional_embeddings/: models.py
tasks/: utils.py
tasks/causal_language_modeling/: models.py  trainer.py
tasks/common/: distance.py  models.py
tasks/contextual_learning/: contextual_token_generator.py  entities.py  models.py
tasks/contrastive_learning/: entities.py  loss.py  models.py
tasks/masked_language_modeling/: models.py  trainers.py
tasks/masked_prediction/: entities.py  models.py
tasks/seq2seq/: models.py  trainers.py
tasks/similarity_learning/: distance.py  entities.py  loss.py  models.py
tasks/zero_shot_text_cls/: models.py
tests/: test.py  utils.py
tests/attention/: test.py
tests/integration/attention/: test.py  test_models.py
tests/integration/lora/: test.py
tests/integration/positional_embeddings/: test_models.py
tests/integration/transformers/: test.py  test_models.py
tests/integration/vision_embeddings/: test_models.py
tests/moe/: test.py
tests/positional_embeddings/: test.py
tests/tasks/causal_language_modeling/: test.py
tests/tasks/masked_language_modeling/: test.py
tests/transformers/decoders/: test.py
tests/transformers/encoders/: test.py
tests/unit/transformers/: test.py
trainer/: models.py
transformers/: decoders.py  encoders.py  models.py  utils.py
vision_embeddings/: entities.py  models.py
(+16 files in other folders)
